--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,16 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
 
-.app {
+.home {
   font-family: 'Krona One', sans-serif;
   height: 100vh;
   width: 100vw;
   background-size: 100% 100vh;
   background-image: url("../img/do-it.png");
+  position: relative;
 
-  h1 {
+  .devInNet {
     text-transform: uppercase;
     text-align: center;
     color: #fefefe;
     padding-top: 18px;
+    font-size: 36px;
+  }
+
+  .description {
+    position: absolute;
+    color: #fefefe;
+    top: 25%;
+    left: 25%;
+    font-size: 90px;
+    width: 1000px;
+  }
+
+  .scroll {
+    position: absolute;
+    bottom: 48px;
+    right: 61px;
   }
 }
