--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -4,9 +4,36 @@
   font-family: 'Krona One', sans-serif;
   height: 100vh;
   width: 100vw;
-  background-size: 100% 100vh;
-  background-image: url("../img/do-it.png");
+  background-size: cover;
+  background-image: url("../img/background.png");
   position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+
+  .spiral {
+    position: absolute;
+    z-index: 3;
+    height: 100%;
+    width: 100%;
+  }
+
+  .rectangle {
+    position: absolute;
+    height: 70vh;
+    width: 60vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+
+  }
+
+  .scroll {
+    position: absolute;
+    bottom: 48px;
+    right: 61px;
+  }
 
   .devInNet {
     text-transform: uppercase;
@@ -14,6 +41,7 @@
     color: #fefefe;
     padding-top: 18px;
     font-size: 36px;
+    z-index: 4;
   }
 
   .description {
@@ -21,13 +49,8 @@
     color: #fefefe;
     top: 25%;
     left: 25%;
-    font-size: 90px;
-    width: 1000px;
-  }
-
-  .scroll {
-    position: absolute;
-    bottom: 48px;
-    right: 61px;
+    font-size: 4vw;
+    width: 20vw;
+    z-index: 4;
   }
 }
