--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
-
+body {
+  height: 9000px;
+}
 .home {
+  position: fixed;
   font-family: 'Krona One', sans-serif;
   height: 100vh;
   width: 100vw;
   background-size: cover;
   background-image: url("../img/background.png");
-  position: relative;
   z-index: 1;
   display: flex;
   justify-content: center;
+  scrollbar-width: none;
 
   .spiral {
     position: absolute;
