feat(home) : masquage de la scrollbar et ajout d'un fixed à Home

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
 body {
   height: 9000px;
+  -ms-overflow-style: none;
+    /* for Internet Explorer, Edge */
+    scrollbar-width: none;
+    /* for Firefox */
+    overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+  /* for Chrome, Safari, and Opera */
 }
 .home {
   position: fixed;
