--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -47,19 +47,35 @@ body::-webkit-scrollbar {
     z-index: 99;
   }
 
-  .left {
-    position: relative;
-    height: 100%;
-    width: 50%;
-    // background-color: greenyellow;
-  }
+  // .left {
+  //   position: relative;
+  //   height: 100%;
+  //   width: 50%;
+  //   background-color: green;
+  // }
 
-  .right {
-    position: relative;
-    height: 100%;
-    width: 50%;
-    // background-color: blue;
-  }
+  // .right {
+  //   position: relative;
+  //   height: 100%;
+  //   width: 50%;
+  //   background-color: blue;
+  // }
+
+  // .top {
+  //   position: absolute;
+  //   height: 50%;
+  //   width: 100%;
+  //   background-color: blue;
+  //   top: 0;
+  // }
+
+  // .bottom {
+  //   position: absolute;
+  //   height: 50%;
+  //   width: 100%;
+  //   background-color: green;
+  //   bottom: 0;
+  // }
 
   // .container {
   //   position: relative;
@@ -107,22 +123,23 @@ body::-webkit-scrollbar {
   .devinnet-developpons {
     display: flex;
     position: absolute;
-    top: calc(3 * (4vw + 4vh));
+    top: 50%;
     transform: translateY(-50%);
-    left: 10vmax;
-    font-size: 3vmax;
+    left: 19.8vmax;
+    font-size: 3.5vmax;
   }
 
   .devinnet-developpons-move {
     display: flex;
+    align-items: center;
     position: absolute;
-    top: calc(3 * (3vw + 3vh));
+    top: 25vmin;
     transform: translateY(-50%);
     left: 3vmax;
     // transform: translate(1vw, -15vh);
-    transition: top 5s, left 5s, font-size 5s;
+    transition: top 4s, left 4s, font-size 4s;
     z-index: 99;
-    font-size: 5.4vmax;
+    font-size: 5vmax;
   }
 
   .devinnet-internet {
@@ -130,20 +147,21 @@ body::-webkit-scrollbar {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    left: 28.1vw;
-    font-size: 3vmax;
+    left: 28.8vmax;
+    font-size: 3.5vmax;
   }
 
   .devinnet-internet-move {
     display: flex;
     position: absolute;
-    top: calc(3 * (4.5vw + 4.5vh));
+    align-items: center;
+    top: 45vmin;
     transform: translateY(-50%);
     left: 3vmax;
     // transform: translate(-26.5vw, -2vh);
-    transition: top 5s, left 5s, font-size 5s;
+    transition: top 4s, left 4s, font-size 4s;
     z-index: 99;
-    font-size: 5.4vmax;
+    font-size: 5vmax;
   }
 
     .devinnet-slogan-disappear {
@@ -154,7 +172,7 @@ body::-webkit-scrollbar {
     .devinnet-slogan-appear {
       visibility: visible;
       overflow: hidden;
-      // transition: 5s;
+      transition: 4s;
       width: 100%;
     }
 
@@ -222,10 +240,18 @@ body::-webkit-scrollbar {
   }
 }
 
-.surrounded {
-  border: 10px solid white;
-  border-radius: 50px;
-  padding: 5px 20px;
+.surrounded-appear {
+  border: 0.4vmax solid white;
+  border-radius: 2.5vmax;
+  padding: 2px 15px;
+  transition: 0.3s ease-out;
+}
+
+.surrounded-disappear {
+  border: 0.4vmax solid transparent;
+  border-radius: 2.5vmax;
+  transition: 1s ease-out;
+  // padding: 2px 15px;
 }
 
 .appear-element {
